feat: Refactor frontend structure and enhance API server
- Integrated a new frontend build process using Vite and React.
- Updated API server to serve static files and handle SPA routing.
- Removed unused components and optimized existing code for better performance.
- Adjusted Dockerfile and docker-compose for improved deployment.
- Cleaned up frontend styles and configurations, removing unnecessary files.
- Enhanced documentation for setup and usage.

--- a/collective-memory-app/Dockerfile
+++ b/collective-memory-app/Dockerfile
@@ -1,21 +1,38 @@
-FROM python:3.11-slim
+# Stage 1: Build frontend
+FROM node:20 AS frontend-build
+WORKDIR /frontend
+COPY frontend/package.json frontend/package-lock.json ./
+RUN npm ci
+COPY frontend/ ./
+RUN npm run build
 
-# Çalışma dizini ayarla
+# Stage 2: Backend + production image
+FROM python:3.11-slim
 WORKDIR /app
 
-# Sistem bağımlılıklarını yükle
+# Sistem bağımlılıkları
 RUN apt-get update && apt-get install -y \
     sqlite3 \
     && rm -rf /var/lib/apt/lists/*
 
-# Python bağımlılıklarını kopyala ve yükle
+# Python bağımlılıkları
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt \
+    && pip install gunicorn
 
-# Uygulama dosyalarını kopyala
+# Backend kodunu kopyala
 COPY src/ ./src/
 COPY config/ ./config/
+COPY api_server.py ./
 
-# Giriş noktasını ayarla
-ENTRYPOINT ["python", "src/main.py"]
-CMD ["--help"] 
+# Frontend build'i kopyala (statik dosyalar)
+COPY --from=frontend-build /frontend/dist ./frontend-dist
+
+# Flask'ın static_folder parametresiyle statik dosyaları serve etmesi için ayar
+ENV FLASK_STATIC_FOLDER=/app/frontend-dist
+ENV FLASK_APP=api_server.py
+ENV FLASK_RUN_PORT=8000
+
+# Production için gunicorn ile başlat
+EXPOSE 8000
+CMD ["gunicorn", "-b", "0.0.0.0:8000", "api_server:app"] 
