--- a/collective-memory-app/frontend/package.json
+++ b/collective-memory-app/frontend/package.json
@@ -1,50 +1,27 @@
 {
-  "name": "collective-memory-dashboard",
-  "version": "2.1.0",
-  "description": "Modern React dashboard for Collective Memory System",
+  "name": "frontend",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host localhost --port 5173 --open false",
-    "dev:stable": "vite --host localhost --port 5173 --open false --force",
+    "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview --port 3001",
-    "test": "playwright test",
-    "test:ui": "playwright test --ui",
-    "test:headed": "playwright test --headed",
-    "test:debug": "playwright test --debug",
-    "test:report": "playwright show-report",
-    "test:install": "playwright install",
-    "test:smoke": "playwright test --grep=\"smoke\"",
-    "test:quick": "playwright test tests/basic-smoke.spec.js"
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^2.1.8",
-    "@heroicons/react": "^2.2.0",
-    "axios": "^1.7.7",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^11.5.4",
-    "lucide-react": "^0.441.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.4.1",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.26.1",
-    "recharts": "^2.12.7"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.54.1",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "playwright": "^1.54.1",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.10",
-    "vite": "^5.4.6"
+    "@eslint/js": "^9.30.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
+    "eslint": "^9.30.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "vite": "^7.0.4"
   }
 }
