--- a/collective-memory-app/frontend/package.json
+++ b/collective-memory-app/frontend/package.json
@@ -28,7 +28,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-query": "^3.39.3",
+    "@tanstack/react-query": "^4.36.1",
     "react-router-dom": "^6.26.1",
     "recharts": "^2.12.7"
   },
